--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '2'
 
 networks:
-  front-tier:
-    driver: bridge
-  back-tier:
+  zenoss:
     driver: bridge
 
 services:
@@ -15,7 +13,7 @@ services:
     ports:
       - "11211"
     networks:
-      - back-tier
+      - zenoss
 
   zenoss4-rabbitmq:
     image: rabbitmq:3.6
@@ -33,7 +31,7 @@ services:
     ports:
       - "5672"
     networks:
-      - back-tier
+      - zenoss
 
   zenoss4-redis:
     image: redis:3.0-alpine
@@ -46,7 +44,7 @@ services:
     ports:
       - "6379"
     networks:
-      - back-tier
+      - zenoss
 
   zenoss4-mariadb:
     image: mariadb:5.5
@@ -65,7 +63,7 @@ services:
     ports:
       - "3306"
     networks:
-      - back-tier
+      - zenoss
 
   zenoss4-core:
     image: mcroth/docker-zenoss4 
@@ -82,25 +80,6 @@ services:
     depends_on:
       - zenoss4-mariadb
     ports:
-      - "8080"
+      - "8080:8080"
     networks:
-      - back-tier
-
-  zenoss4-nginx:
-    image: nginx:alpine
-    container_name: zenoss4-nginx
-    hostname: zenoss4-nginx
-    volumes:
-      - "./init_fs/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro"
-#      - "./init_fs/etc/nginx/ssl:/etc/nginx/ssl:ro"
-    links:
-      - zenoss4-core
-    depends_on:
-      - zenoss4-core
-    ports:
-      - "80:80"
-#      - "443:443"
-    networks:
-      - back-tier
-      - front-tier
-      
+      - zenoss
