--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
 
   zenoss4-memcached:
     image: stdnwbeheer/memcached:1.4-alpine
+    container_name: zenoss4-memcached
+    hostname: zenoss4-memcached
+    mem_limit: 1g    
     ports:
       - "11211"
     networks:
@@ -21,6 +24,8 @@ services:
 
   zenoss4-rabbitmq:
     image: stdnwbeheer/rabbitmq:3.6
+    container_name: zenoss4-rabbitmq
+    hostname: zenoss4-rabbitmq
     ports:
       - "5672"
     volumes:
@@ -40,6 +45,8 @@ services:
 
   zenoss4-redis:
     image: stdnwbeheer/redis:3.0-alpine
+    container_name: zenoss4-redis
+    hostname: zenoss4-redis
     ports:
       - "6379"
     volumes:
@@ -54,6 +61,8 @@ services:
 
   zenoss4-mariadb:
     image: stdnwbeheer/mariadb:5.5
+    container_name: zenoss4-mariadb
+    hostname: zenoss4-mariadb
     ports:
       - "3306"
     volumes:
@@ -74,6 +83,8 @@ services:
 
   zenoss4-core:
     image: stdnwbeheer/zenoss4.2.5
+    container_name: zenoss4-core
+    hostname: zenoss4-core
     ports:
       - "8080:8080"
     volumes:
